--- a/0708숙제/index.html
+++ b/0708숙제/index.html
@@ -12,7 +12,7 @@
     <input type="text"> 비밀번호 <input type="text"> <button>로그인</button> 
   </div>
 
-  <div>
+  <div class="num">
 
     <a href="">1</a>
     <a href="">2</a>
